--- a/02-counter/setup/index.html
+++ b/02-counter/setup/index.html
@@ -9,8 +9,18 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>your code goes here</h1>
+    <main>
+      <h1>Counter</h1>
+      <span id="value">0</span>
+      <div class="button-container">
+        <button class="btn decrease">Decrease</button>
+        <button class="btn reset">Reset</button>
+        <button class="btn increase">Increase</button>
+      </div>
+    </main>
+
     <!-- javascript -->
     <script src="app.js"></script>
+
   </body>
 </html>
